# anaplan_diff

./: .gitignore  CLAUDE.md  README.md  parameter_naming_todo.md  pyproject.toml  tests.md
ADR/: ADR-001-anaplan-export-format-support.md
anaplan_diff/: __init__.py  cli.py  comparator.py  detector.py  formatter.py  pipeline.py  types.py
docs/: automated-demo-recording.md  comparison-tolerance-improvements.md
docs/adr/: 001-comparison-tolerance.md  002-anaplan-export-format-support.md  003-functional-programming-approach.md
examples/: baseline.csv  comparison.csv
tests/: conftest.py  test_basic.py  test_csv_generation.py  test_dimension_detection.py  test_integration.py  test_non_numeric_support.py
tests/fixtures/: __init__.py  csv_generators.py
